docs/7.57/md/abencomment.md
---
title: "Comments"
description: |
  A comment is a description inserted in the source code of a program that helps the user better understand the program and that is ignored when the program is generated by the ABAP Compiler. From a technical perspective, a comment can have any content. Two language elements are available for creating
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencomment.htm"
abapFile: "abencomment.htm"
keywords: ["insert", "loop", "do", "if", "try", "method", "class", "data", "types", "abencomment"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Syntax Elements of an ABAP Program](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_syntax.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Comments, ABENCOMMENT, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for im
provement:)

Comments

A comment is a description inserted in the source code of a program that helps the user better understand the program and that is ignored when the program is generated by the ABAP Compiler. From a technical perspective, a comment can have any content. Two language elements are available for creating comments:

-   The \* character in the first position of a line in a program defines the entire line as a comment.
-   The " character at any position defines that all of the remaining content in the line is a comment. This rule does not apply to the " character in [character literals](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharacter_literal_glosry.htm "Glossary Entry") and [pseudo comments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpseudo_comment_glosry.htm "Glossary Entry").

These language elements make it possible to create two types of comments:

-   Comment lines
    
    A comment line contains nothing but a comment. It can be defined either by the \* character in the first position in the program line or by the " character at any position of an otherwise blank program line.
    
-   Line end comments
    
    A line end comment is a comment started with the " character and that stands behind an ABAP statement or parts thereof.
    

Programming Guidelines

-   [Arrange comments correctly](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarrange_guidl.htm "Guideline")
-   [Write program comments in English](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencomment_langu_guidl.htm "Guideline")
-   [Make meaningful comments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontent_guidl.htm "Guideline")
-   [Character set in source code](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharacter_set_guidl.htm "Guideline")

Hint

A special type of line end comments are [ABAP Doc comments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_doc_comment_glosry.htm "Glossary Entry") started by "!. These comments can be evaluated by tools of an [ABAP development environment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dev_envir_glosry.htm "Glossary Entry") to support [ABAP Doc](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_doc_glosry.htm "Glossary Entry").

Example

The following example demonstrates the recommended use of comments. Comment lines started by \* are used to structure the program. Line end comments occur after declarations and statements at the end of blocks. All other comments stand in front of the described statements and are indented accordingly.

\*----------------------------------------------------------\*
\* Class implementations                                    \*
\*----------------------------------------------------------\*
CLASS application IMPLEMENTATION.
  METHOD main.
    DATA: items    TYPE STANDARD TABLE
                   OF REF TO item,     "Item table
          item\_ref LIKE LINE OF items. "Item reference
    DATA: amount       TYPE i, "Amount per item
          total\_amount TYPE i. "Total amount of items
    ...
    "Loop over all items to compute total amount
    LOOP AT items INTO item\_ref.
      IF item\_ref IS BOUND AND
        item\_ref->is\_valid( ) = abap\_true.
        "Compute total amount for valid items
        amount = item\_ref->get\_amount( ).
        ADD amount TO total\_amount.
        ...
      ELSE.
        ...
      ENDIF. "item\_ref IS BOUND AND...
    ENDLOOP.
    ...
  ENDMETHOD. "main
ENDCLASS. "application